--- a/public/css/wp-inci.css
+++ b/public/css/wp-inci.css
@@ -2,6 +2,43 @@
     margin-bottom: 1em;
     font-size: .83em
 }
+.wp-inci{
+    background: var(--footer-background);
+    padding: 1em 2em;
+}
+.wp-inci .row{
+    display: flex;
+    flex-wrap: wrap;
+}
+.wp-inci .row div{
+    width: 25%;
+    padding-right: 15px;
+}
+.wp-inci .row div .false,
+.wp-inci .row div .true{
+    position: relative;
+    padding-left: 25px;
+    display: block;
+}
+.wp-inci .row div .false:before{
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    left: 0;
+    content: '';
+    display: inline-block;
+    background-image: url("data:image/svg+xml,%0A%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 295.428 295.428' style='enable-background:new 0 0 295.428 295.428;' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M147.714,0C66.264,0,0,66.264,0,147.714s66.264,147.714,147.714,147.714s147.714-66.264,147.714-147.714 S229.164,0,147.714,0z M147.714,265.428C82.807,265.428,30,212.621,30,147.714S82.807,30,147.714,30 s117.714,52.807,117.714,117.714S212.621,265.428,147.714,265.428z' fill='red'/%3E%3Cpath d='M147.714,61.68c-8.284,0-15,6.716-15,15v79c0,8.284,6.716,15,15,15s15-6.716,15-15v-79 C162.714,68.396,155.998,61.68,147.714,61.68z' fill='red'/%3E%3Ccircle cx='147.714' cy='217.68' r='15' fill='red'/%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
+.wp-inci .row div .true:before{
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    left: 0;
+    content: '';
+    display: inline-block;
+    background-image: url("data:image/svg+xml,%0A%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 330 330' style='enable-background:new 0 0 330 330;' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M165,0C74.019,0,0,74.019,0,165s74.019,165,165,165s165-74.019,165-165S255.981,0,165,0z M165,300 c-74.44,0-135-60.561-135-135S90.56,30,165,30s135,60.561,135,135S239.439,300,165,300z' fill='green'/%3E%3Cpath d='M226.872,106.664l-84.854,84.853l-38.89-38.891c-5.857-5.857-15.355-5.858-21.213-0.001 c-5.858,5.858-5.858,15.355,0,21.213l49.496,49.498c2.813,2.813,6.628,4.394,10.606,4.394c0.001,0,0,0,0.001,0 c3.978,0,7.793-1.581,10.606-4.393l95.461-95.459c5.858-5.858,5.858-15.355,0-21.213 C242.227,100.807,232.73,100.806,226.872,106.664z' fill='green'/%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
+}
 
 table.wp-inci {
     max-width: 100% !important;
@@ -25,6 +62,10 @@ table.wp-inci td {
     min-width: 60px;
     border: 0;
     word-break: break-all
+}
+table.wp-inci td .functions {
+    width: 100%;
+    display: block;
 }
 
 table.wp-inci td:first-child {
