--- a/public/css/wp-inci.css
+++ b/public/css/wp-inci.css
@@ -2,25 +2,30 @@
     margin-bottom: 1em;
     font-size: .83em
 }
-.wp-inci{
+
+.wp-inci {
     background: var(--footer-background);
     padding: 1em 2em;
 }
-.wp-inci .row{
+
+.wp-inci .row {
     display: flex;
     flex-wrap: wrap;
 }
-.wp-inci .row div{
+
+.wp-inci .row div {
     width: 25%;
     padding-right: 15px;
 }
+
 .wp-inci .row div .false,
-.wp-inci .row div .true{
+.wp-inci .row div .true {
     position: relative;
     padding-left: 25px;
     display: block;
 }
-.wp-inci .row div .false:before{
+
+.wp-inci .row div .false:before {
     width: 16px;
     height: 16px;
     position: absolute;
@@ -30,7 +35,7 @@
     background-image: url("data:image/svg+xml,%0A%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 295.428 295.428' style='enable-background:new 0 0 295.428 295.428;' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M147.714,0C66.264,0,0,66.264,0,147.714s66.264,147.714,147.714,147.714s147.714-66.264,147.714-147.714 S229.164,0,147.714,0z M147.714,265.428C82.807,265.428,30,212.621,30,147.714S82.807,30,147.714,30 s117.714,52.807,117.714,117.714S212.621,265.428,147.714,265.428z' fill='red'/%3E%3Cpath d='M147.714,61.68c-8.284,0-15,6.716-15,15v79c0,8.284,6.716,15,15,15s15-6.716,15-15v-79 C162.714,68.396,155.998,61.68,147.714,61.68z' fill='red'/%3E%3Ccircle cx='147.714' cy='217.68' r='15' fill='red'/%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
 }
 
-.wp-inci .row div .true:before{
+.wp-inci .row div .true:before {
     width: 16px;
     height: 16px;
     position: absolute;
@@ -63,6 +68,7 @@ table.wp-inci td {
     border: 0;
     word-break: break-all
 }
+
 table.wp-inci td .functions {
     width: 100%;
     display: block;
@@ -126,4 +132,104 @@ table.wp-inci div.w {
     font-weight: 400;
     line-height: normal;
     color: #6c757d !important
+}
+
+.wp-inci-block {
+    margin: 0 0 43px;
+    padding: 40px;
+    border-radius: 10px;
+    background: linear-gradient(90deg, #F5F4E6, #F7EEED);
+}
+
+.item {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+span.info-circle {
+    background-image: url('https://incidecoder-assets.storage.googleapis.com/assets/img/000101-circle-info-03-no-take.svg');
+    user-select: none;
+    width: 18px;
+    height: 18px;
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.tooltipster-sidetip .tooltipster-box {
+    box-shadow: 2px 2px 5px 0 hsla(0, 0%, 70.2%, .87);
+    border: 1px solid #e6e6e6;
+    border-radius: 5px;
+    background: #fff;
+}
+
+.tooltipster-content {
+    box-sizing: border-box;
+    max-height: 100%;
+    max-width: 100%;
+    overflow: auto;
+    border-radius: 5px;
+    border: none;
+    color: #000;
+    line-height: 18px;
+    padding: 6px 14px;
+}
+
+.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border {
+    border-right-color: #e6e6e6;
+}
+
+.tooltipster-sidetip .tooltipster-content {
+    border-radius: 5px;
+    border: none;
+    color: #000;
+    line-height: 18px;
+    padding: 1vw;
+}
+
+.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-background {
+    border-right-color: #fff;
+    left: 3px;
+    top: 0;
+}
+
+.tooltip_templates {
+    display: none;
+}
+
+.item-section {
+    display: block;
+    margin: 1vw 0 0;
+    margin-right: 2vw;
+}
+
+.data-title {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.synonyms-title {
+    -webkit-align-self: flex-start;
+    align-self: flex-start;
+    -webkit-flex-shrink: 0;
+    flex-shrink: 0;
+    margin: 0 13px 0 0;
+    padding: 3px 9px 4px;
+    color: #FFF;
+    border-radius: 10px;
+    background: #5C6CB4;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.synonyms-list {}
+.img-label {
+    width: 30px!important;
+    vertical-align: middle;
+    margin-right: 15px!important;
 }
